--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
-<title> CRITERION COLLECTION: a sunburst analysis </title>
+<title> Sunburst analysis </title>
 
-<meta name="description"content="Sunburst created since <a href="https://www.kaggle.com/datasets/ikarus777/criterion-movies-collection"> the criterion movies collection dataset</a>"> 
+<meta name="description"content="<h1>Sunburst created since the criterion movies collection dataset</h1>"> 
 <meta name= "Keywords"content="Film, Dataviz, Média, Cinéma, Humanités numériques, digital humanities">
 <meta name= "author"content="Paula Rojas">
 <head>
@@ -12,9 +12,18 @@
     <meta name= "Dataviz Analysis" content="">
     <meta name="Paula Rojas" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <center><h1>Criterion Collection Sunburst</h1></center>
 </head>
 <body>
+    
 <iframe width="100%" height="1237.265625" frameborder="0"
   src="https://observablehq.com/embed/34aa8584f7b29a93?cells=chart"></iframe>
+    
+    <p>  This datavisualisation shows an hierarchy between the countrys were the films are made and their directors from the Criterion collection's movies. 
+      <br> We can observe that there's 3 countrys of preference to make movies: USA, France and Japan. 
+        <br> Also, there are some directors who are predominant in each country. Their name's size shows the quantity of theirs films. 
+        <br> This datavisualisation allows to realize that some countrys counts with only one director, this is the case of Finland and Aki Kaurismaki.
+        <br> Furthermore, the Criterion collection is formed by a great diversity of countrys, but most at all, a great quantity of directors
+    </p>
 </body>
 </html>
