--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -13,6 +13,7 @@
     <meta name="Paula Rojas" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center><h1>Criterion Collection Sunburst</h1></center>
+     <br> <h2> Observable <h2>
 </head>
 <body>
     
