--- a/plot-1.html
+++ b/plot-1.html
@@ -17,11 +17,8 @@
       <h2>
 </head>
 <body>
-    
-<i<img src="https://github.com/PaulaRojas5/wikiexe/blob/69b527030b6e88c913fcce812b44efc1dfcac223/plot%20(4).png" 
-srcset="images/thumbs/masonry/Encyclopaedia.jpeg 1x, images/thumbs/masonry/Encyclopaedia.jpeg 2x" alt="">frame width="100%" height="1237.265625" frameborder="0"
-  src="https://observablehq.com/embed/34aa8584f7b29a93?cells=chart"></iframe>
-    
+    <img src="https://github.com/PaulaRojas5/wikiexe/blob/69b527030b6e88c913fcce812b44efc1dfcac223/plot%20(4).png" height="160" width="250">
+
     <p>  This datavisualisation shows an hierarchy between the countrys were the films are made and their directors from the Criterion collection's movies. 
       <br> We can observe that there's 3 countrys of preference to make movies: USA, France and Japan. 
         <br> Also, there are some directors who are predominant in each country. Their name's size shows the quantity of theirs films. 
