--- a/plot-1.html
+++ b/plot-1.html
@@ -13,17 +13,16 @@
     <meta name="Paula Rojas" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center><h1>Criterion Collection Color Analysis</h1></center>
-    <br> <h2> Macroanalyse d'images avec JavaScript
-      <h2>
+    <br> <h2> Macroanalyse d'images avec JavaScript </h2>
 </head>
 <body>
     <img src="https://github.com/PaulaRojas5/wikiexe/blob/69b527030b6e88c913fcce812b44efc1dfcac223/plot%20(4).png" height="160" width="250">
 
-    <p>  This datavisualisation shows an hierarchy between the countrys were the films are made and their directors from the Criterion collection's movies. 
-      <br> We can observe that there's 3 countrys of preference to make movies: USA, France and Japan. 
-        <br> Also, there are some directors who are predominant in each country. Their name's size shows the quantity of theirs films. 
-        <br> This datavisualisation allows to realize that some countrys counts with only one director, this is the case of Finland and Aki Kaurismaki.
-        <br> Furthermore, the Criterion collection is formed by a great diversity of countrys, but most at all, a great quantity of directors
+    <p> This plot shows all the film's posters from the Criterion Collection dataset. The plot has an X axis by lightness and Y axis by Hue. The thumb width is 153px and the thumb height is 190px
+      <br> We can observe that there's a majority of posters that are black or dark, then a lot of blue and red posters and finally white. 
+        <br> Also, there green posters are minority and they're represented by faces. 
+        <br> This datavisualisation allows to realize that some posters are extremly white or black.
+        <br> Furthermore, the Criterion collection is formed by a great diversity of movies with red and yellow posters
     </p>
 </body>
 </html>
