--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -13,7 +13,7 @@
     <meta name="Paula Rojas" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center><h1>Criterion Collection Sunburst</h1></center>
-     <br> <h2> Observable <h2>
+     <br> <h2> Observable and OldRawGraphs <h2>
 </head>
 <body>
     
@@ -26,5 +26,9 @@
         <br> This datavisualisation allows to realize that some countrys counts with only one director, this is the case of Finland and Aki Kaurismaki.
         <br> Furthermore, the Criterion collection is formed by a great diversity of countrys, but most at all, a great quantity of directors
     </p>
+    <p> Here's another sunburst with the same information</p>
+    <img src="https://paularojas5.github.io/wikiexe/ldrawgraphs.svg">
+
+
 </body>
 </html>
