--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -13,21 +13,22 @@
     <meta name="Paula Rojas" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center><h1>Criterion Collection Sunburst</h1></center>
-     <br> <h2> Observable and OldRawGraphs <h2>
+     <br> <h2> Observable and OldRawGraphs </h2>
 </head>
 <body>
     
 <iframe width="100%" height="1237.265625" frameborder="0"
   src="https://observablehq.com/embed/34aa8584f7b29a93?cells=chart"></iframe>
     
-    <p>  This datavisualisation shows an hierarchy between the countrys were the films are made and their directors from the Criterion collection's movies. 
+    <p>This datavisualisation shows an hierarchy between the countrys were the films are made and their directors from the Criterion collection's movies. 
       <br> We can observe that there's 3 countrys of preference to make movies: USA, France and Japan. 
         <br> Also, there are some directors who are predominant in each country. Their name's size shows the quantity of theirs films. 
         <br> This datavisualisation allows to realize that some countrys counts with only one director, this is the case of Finland and Aki Kaurismaki.
         <br> Furthermore, the Criterion collection is formed by a great diversity of countrys, but most at all, a great quantity of directors
     </p>
-    <p> Here's another sunburst with the same information</p>
-    <img src="https://paularojas5.github.io/wikiexe/ldrawgraphs.svg">
+    <br>
+    <h3> Here's another sunburst with the same information</h3>
+    <img src="https://paularojas5.github.io/wikiexe/oldrawgraphs.svg">
 
 
 </body>
