--- a/tableau.html
+++ b/tableau.html
@@ -16,10 +16,13 @@
     <br> <h2> Tableau </h2>
 </head>
 <body>
-     <p> This analysis a global map. 
-       <br> The image is not dynamic because of the restrictions by Tableau.  <br>
+     <p> This is a global map analysis. Each color represents a director, and they may be placed in differents countrys, this is because is the country where the movie was made.
+       <br> The image is not dynamic because of the restrictions by Tableau. 
+         <br> Anyways, we can observe how the Criterion Collection contributes to the cinema around the world. 
+         <br> This way it is easier to realize where the Criterion Collection did not contribute to the cinema, for exemple, there's no point in Colombia or the biggest part of Africa. 
+         <br>
     <img src="https://paularojas5.github.io/wikiexe/Tableau-1.png">
-        <br> Anyways, we can observe how the Criterion Collection contributes to the cinema around the world. 
+        
         <br> In the Tableau tool, we can also focus our attention in one director, and realize where she/he made the movies.
         <br> This is an exemple using the director Alfred Hitchcock
     </p>
