--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ class of the Paris 8 University">
 <h2>Criterion Collection BigData Analysis</h2>
     
 <ul> 
-    <li> <h3><a WikiData research href="https://paularojas5.github.io/wikiexe/wikidata.html"</a></h3>
-    <li> <h3><a Color Analysis href="https://paularojas5.github.io/wikiexe/plot-1.html"</a></h3>
-    <li> <h3><a Text Analysis href="https://paularojas5.github.io/wikiexe/voyanttools.html"</a></h3>
-    <li> <h3><a Simple Bar Chart analysis href="https://paularojas5.github.io/wikiexe/vega-1.html"</a></h3>
+    <li> <h3><a href="https://paularojas5.github.io/wikiexe/wikidata.html"WikiData research </a></h3>
+    <li> <h3><a href="https://paularojas5.github.io/wikiexe/plot-1.html"Color Analysis </a></h3>
+    <li> <h3><a href="https://paularojas5.github.io/wikiexe/voyanttools.html"Text Analysis</a></h3>
+    <li> <h3><a href="https://paularojas5.github.io/wikiexe/vega-1.html"Simple Bar Chart analysis</a></h3>
     <li> <h3><a href="https://paularojas5.github.io/wikiexe/tableau.html"> Map Analysis </a></h3>
     <li> <h3><a href="https://paularojas5.github.io/wikiexe/CriterionCollectionSunburst.html"> Sunburst analysis </a></h3>
 </ul>  
