--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -30,6 +30,6 @@
     <h3> Here's another sunburst with the same information</h3>
     <img src="https://paularojas5.github.io/wikiexe/oldrawgraphs.svg">
 
-
+<h1><a href="https://paularojas5.github.io/wikiexe/">Back to home </a> </h1>
 </body>
 </html>
