--- a/plot-1.html
+++ b/plot-1.html
@@ -25,6 +25,6 @@
     <br>
     <img src="https://paularojas5.github.io/wikiexe/plot-1.png" height="2800" width="2600">
 
-   
+ <h1><a href="https://paularojas5.github.io/wikiexe/">Back to home </a> </h1>  
 </body>
 </html>
