--- a/vega-1.html
+++ b/vega-1.html
@@ -22,6 +22,6 @@
     <p>This datavisualisation shows the directors and their movies. 
       <br> We can observe the most succesfuls directors, Igmar Bergman the first. </p>
 
-
+<h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>
 </body>
 </html>
