--- a/tableau.html
+++ b/tableau.html
@@ -29,6 +29,6 @@
     <br>
     <img src="https://paularojas5.github.io/wikiexe/Tableau-2.png">
 
-   
+   <h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>
 </body>
 </html>
