--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ class of the Paris 8 University">
 </head>
     <body>
     
-<h2>Criterion Collection BigData Analysis</h2>
+        <center> <h2>Criterion Collection BigData Analysis</h2> </center>
     
 <ul> 
     <li> <h3><a href="https://paularojas5.github.io/wikiexe/wikidata.html"> WikiData research </a></h3>
