--- a/index.html
+++ b/index.html
@@ -62,5 +62,15 @@ class of the Paris 8 University">
     <li> <h3><a href="https://paularojas5.github.io/wikiexe/CriterionCollectionSunburst.html"> Sunburst analysis </a></h3>
 </ul>  
 </div>
-</body>
-    
+
+    <footer>
+<h2>By: Paula Rojas</h2>
+
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/paulaarojasc">LinkedIn</a></li>
+                        <li><a href="https://nosoyesa.tumblr.com">Blog</a></li>
+                   
+                    </ul>
+</footer>
+        </body>
+</html>
