--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@ class of the Paris 8 University">
 <p>Research about the Criterion Collection films using differents BigData analytic tools and data-visualisation. Work from the  </p> 
 <h5>Master 2: Humanités Numériques (NET) by Université Paris 8. Atelier: "Analyse, gestion, et visualisation des données massives" with Prof. Everardo Reyes</h5>
         
-       
-
-        <br> <ul> <h3> datasets: </h3> </ul>
+<br> <ul> <h3> datasets: </h3> </ul>
 <li>Wikidata</li>
-<li><a href"https://www.kaggle.com/datasets/ikarus777/criterion-movies-collection"Kaggle></li>
+<li><a href="https://www.kaggle.com/datasets/ikarus777/criterion-movies-collection"> Kaggle </li>
         <br>
           <details>
     <summary>Content:</summary>
