--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ class of the Paris 8 University">
         
 <br> <ul> <h3> datasets: </h3> </ul>
 <li>Wikidata</li>
-<li><a href="https://www.kaggle.com/datasets/ikarus777/criterion-movies-collection"> Kaggle </li>
+        <li><a href="https://www.kaggle.com/datasets/ikarus777/criterion-movies-collection"> Kaggle </a> </li>
         <br>
           <details>
     <summary>Content:</summary>
