--- a/voyanttools.html
+++ b/voyanttools.html
@@ -17,13 +17,13 @@
 </head>
 <body>
      <p> This analysis shows all key words from descriptions of the Criterion Collection dataset. 
-       <br> The key words are references to the movie: words like film and director. 
-        <br> Anyways, some words like new, life, love, american and young are important to describe the whole of the collection. 
+       <br> The key words are references to the movie: words like film and director. <br>
+        <br> Anyways, some words like new, life, love, american and young are important to describe the whole of the collection. <br>
         <br> We can think that those are the promise to the user of this collection.
         <br> Furthermore, the Criterion collection is formed by a great diversity of movies that talk more about cinema than hollywood, but using it both
     </p>
     <br>
-    <img src="https://paularojas5.github.io/wikiexe/description-voyantools.svg">
+    <img src="https://paularojas5.github.io/wikiexe/description-voyantools.svg" alt="Girl in a jacket" width="500" height="600">
 
    <h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>
 </body>
