Text analysis.html

--- a/voyanttools.html
+++ b/voyanttools.html
@@ -23,7 +23,7 @@
         <br> Furthermore, the Criterion collection is formed by a great diversity of movies that talk more about cinema than hollywood, but using it both
     </p>
     <br>
-    <img src="https://paularojas5.github.io/wikiexe/description-voyantools.svg" alt="Words cloud" >
+    <img src="https://paularojas5.github.io/wikiexe/description-voyantools.png" alt="Words cloud" >
 
    <h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>
 </body>
