--- a/tableau.html
+++ b/tableau.html
@@ -21,13 +21,13 @@
          <br> Anyways, we can observe how the Criterion Collection contributes to the cinema around the world. 
          <br> This way it is easier to realize where the Criterion Collection did not contribute to the cinema, for exemple, there's no point in Colombia or the biggest part of Africa. 
          <br>
-    <img src="https://paularojas5.github.io/wikiexe/Tableau-1.png">
+    <img src="https://paularojas5.github.io/wikiexe/Tableau-1.png" class="responsive">
         
         <br> In the Tableau tool, we can also focus our attention in one director, and realize where she/he made the movies.
         <br> This is an exemple using the director Alfred Hitchcock
     </p>
     <br>
-    <img src="https://paularojas5.github.io/wikiexe/Tableau-2.png">
+    <img src="https://paularojas5.github.io/wikiexe/Tableau-2.png" class="responsive">
 
    <h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>
 </body>
