--- a/tableau.html
+++ b/tableau.html
@@ -11,7 +11,12 @@
     <title>Criterion Collection Geographic Analysis</title>
     <meta name= "Dataviz Analysis" content="">
     <meta name="Paula Rojas" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+        <style>
+.responsive {
+  max-width: 100%;
+  height: auto;
+}>
     <center><h1>Criterion Collection Geographic Analysis</h1></center>
     <br> <h2> Tableau </h2>
 </head>
