--- a/tableau.html
+++ b/tableau.html
@@ -12,11 +12,12 @@
     <meta name= "Dataviz Analysis" content="">
     <meta name="Paula Rojas" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"
-        <style>
+       <style>
 .responsive {
-  max-width: 100%;
+  width: 100%;
   height: auto;
-}>
+}
+</style>
     <center><h1>Criterion Collection Geographic Analysis</h1></center>
     <br> <h2> Tableau </h2>
 </head>
