--- a/plot-1.html
+++ b/plot-1.html
@@ -14,6 +14,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center><h1>Criterion Collection Color Analysis</h1></center>
     <br> <h2> Macroanalyse d'images avec JavaScript </h2>
+     <style>
+.responsive {
+  width: 100%;
+  height: auto;
+}
+</style>
 </head>
 <body>
      <p> This plot shows all the film's posters from the Criterion Collection dataset. The plot has an X axis by lightness and Y axis by Hue. The thumb width is 153px and the thumb height is 190px
@@ -23,7 +29,7 @@
         <br> Furthermore, the Criterion collection is formed by a great diversity of movies with red and yellow posters
     </p>
     <br>
-    <img src="https://paularojas5.github.io/wikiexe/plot-1.png" height="2800" width="2600">
+    <img src="https://paularojas5.github.io/wikiexe/plot-1.png" class="responsive" height="2800" width="2600">
 
  <h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>  
 </body>
