--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -14,10 +14,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center><h1>Criterion Collection Sunburst</h1></center>
      <br> <h2> Observable and OldRawGraphs </h2>
+    <svg version="1.1" viewBox="0 0 500 500">
+	<circle fill="#F7941E" stroke="#231F20" stroke-width="10" 
+	cx="250" cy="250" r="200" opacity="0.6" />
+</svg>
 </head>
 <body>
     
-<iframe width="100%" height="1237.265625" frameborder="0"
+<iframe width="100%" height="1237.265625" frameborder="0" 
   src="https://observablehq.com/embed/34aa8584f7b29a93?cells=chart"></iframe>
     
     <p>This datavisualisation shows an hierarchy between the countrys were the films are made and their directors from the Criterion collection's movies. 
@@ -28,7 +32,7 @@
     </p>
     <br>
     <h3> Here's another sunburst with the same information</h3>
-    <img src="https://paularojas5.github.io/wikiexe/oldrawgraphs.svg">
+    <img src="https://paularojas5.github.io/wikiexe/oldrawgraphs.svg" style="width: 100%; height: auto;">
 
 <h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>
 </body>
