--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -22,7 +22,7 @@
 <body>
     
 <iframe width="100%" height="1237.265625" frameborder="0" 
-  src="https://observablehq.com/embed/34aa8584f7b29a93?cells=chart"></iframe>
+  src="https://observablehq.com/embed/34aa8584f7b29a93?cells=chart"> style="width: 100%; height: auto;"</iframe>
     
     <p>This datavisualisation shows an hierarchy between the countrys were the films are made and their directors from the Criterion collection's movies. 
       <br> We can observe that there's 3 countrys of preference to make movies: USA, France and Japan. 
