--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -6,6 +6,25 @@
 <meta name="description"content="<h1>Sunburst created since the criterion movies collection dataset</h1>"> 
 <meta name= "Keywords"content="Film, Dataviz, Média, Cinéma, Humanités numériques, digital humanities">
 <meta name= "author"content="Paula Rojas">
+	<style>
+.container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+</style>
 <head>
     <meta charset="utf-8">
     <title>Criterion Collection Sunburst</title>
@@ -21,8 +40,10 @@
 </head>
 <body>
     
-<iframe width="100%" height="1236" frameborder="0"
+<div class="container">
+	<iframe width="100%" height="1236" frameborder="0"
   src="https://observablehq.com/embed/8eee135e3bbddad4?cells=chart"></iframe>
+</div>
 	
     <p>This datavisualisation shows an hierarchy between the countrys were the films are made and their directors from the Criterion collection's movies. 
       <br> We can observe that there's 3 countrys of preference to make movies: USA, France and Japan. 
