--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
-<title> Sunburst analysis </title>
+<title> Sunburst's analysis </title>
 
 <meta name="description"content="<h1>Sunburst created since the criterion movies collection dataset</h1>"> 
 <meta name= "Keywords"content="Film, Dataviz, Média, Cinéma, Humanités numériques, digital humanities">
@@ -11,7 +11,7 @@
   position: relative;
   width: 100%;
   overflow: hidden;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  padding-top: 100%; /* 1:1 Aspect Ratio */
 }
 
 .responsive-iframe {
