--- a/voyanttools.html
+++ b/voyanttools.html
@@ -12,6 +12,12 @@
     <meta name= "Dataviz Analysis" content="">
     <meta name="Paula Rojas" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+.responsive {
+  width: 100%;
+  height: auto;
+}
+</style>
     <center><h1>Criterion Collection Text Analysis</h1></center>
     <br> <h2> Voyant Tools </h2>
 </head>
@@ -23,7 +29,7 @@
         <br> Furthermore, the Criterion collection is formed by a great diversity of movies that talk more about cinema than hollywood, but using it both
     </p>
     <br>
-    <img src="https://paularojas5.github.io/wikiexe/description-voyantools.png" alt="Words cloud" width="800" height="455">
+    <img src="https://paularojas5.github.io/wikiexe/description-voyantools.png" alt="Words cloud" class="responsive" height="424" width="241">
 
    <h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>
 </body>
