--- a/voyanttools.html
+++ b/voyanttools.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
 .responsive {
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 100%;
 }
 </style>
     <center><h1>Criterion Collection Text Analysis</h1></center>
