--- a/voyanttools.html
+++ b/voyanttools.html
@@ -14,8 +14,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
 .responsive {
-  width: auto;
-  height: 100%;
+  width: 100%;
+    max-width: 400px;
+  height: auto;
 }
 </style>
     <center><h1>Criterion Collection Text Analysis</h1></center>
