--- a/voyanttools.html
+++ b/voyanttools.html
@@ -12,13 +12,11 @@
     <meta name= "Dataviz Analysis" content="">
     <meta name="Paula Rojas" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-.responsive {
-  width: 100%;
-    max-width: 400px;
-  height: auto;
-}
-</style>
+    
+    <svg version="1.1" viewBox="0 0 500 500">
+	<circle fill="#F7941E" stroke="#231F20" stroke-width="10" 
+	cx="250" cy="250" r="200" opacity="0.6" />
+        
     <center><h1>Criterion Collection Text Analysis</h1></center>
     <br> <h2> Voyant Tools </h2>
 </head>
@@ -30,7 +28,7 @@
         <br> Furthermore, the Criterion collection is formed by a great diversity of movies that talk more about cinema than hollywood, but using it both
     </p>
     <br>
-    <img src="https://paularojas5.github.io/wikiexe/description-voyantools.png" alt="Words cloud" class="responsive" height="424" width="241">
+    <img src="https://paularojas5.github.io/wikiexe/description-voyantools.svg" alt="Words cloud" style="width: 100%; height: auto;">
 
    <h1><a href="https://paularojas5.github.io/wikiexe/"> Back to home </a> </h1>
 </body>
