--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -7,22 +7,10 @@
 <meta name= "Keywords"content="Film, Dataviz, Média, Cinéma, Humanités numériques, digital humanities">
 <meta name= "author"content="Paula Rojas">
 	<style>
-.container {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  padding-top: 100%; /* 1:1 Aspect Ratio */
-}
-
-.responsive-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
+.resp-container { 
+  position: relative; 
+  overflow: hidden; 
+  padding-top: 56.25%; 
 }
 </style>
 <head>
@@ -40,7 +28,7 @@
 </head>
 <body>
     
-<div class="container">
+<div class="resp-container">
 	<iframe width="100%" height="1236" frameborder="0"
   src="https://observablehq.com/embed/8eee135e3bbddad4?cells=chart"></iframe>
 </div>
