--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
-<title> Sunburst's analysis </title>
+<title> Sunburst analysis </title>
 
 <meta name="description"content="<h1>Sunburst created since the criterion movies collection dataset</h1>"> 
 <meta name= "Keywords"content="Film, Dataviz, Média, Cinéma, Humanités numériques, digital humanities">
