--- a/CriterionCollectionSunburst.html
+++ b/CriterionCollectionSunburst.html
@@ -21,6 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center><h1>Criterion Collection Sunburst</h1></center>
      <br> <h2> Observable and OldRawGraphs </h2>
+	
     <svg version="1.1" viewBox="0 0 500 500">
 	<circle fill="#F7941E" stroke="#231F20" stroke-width="10" 
 	cx="250" cy="250" r="200" opacity="0.6" />
@@ -29,7 +30,7 @@
 <body>
     
 <div class="resp-container">
-	<iframe width="100%" height="1236" frameborder="0"
+	<iframe width="100%" height="auto" frameborder="0" class="responsive"
   src="https://observablehq.com/embed/8eee135e3bbddad4?cells=chart"></iframe>
 </div>
 	
